--- a/index.ipynb
+++ b/index.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -240,10 +240,10 @@
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7f94c57eefd0>"
+       "<folium.map.Marker at 0x7f1de6391860>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
